<resources>
    <string name="app_name">UL Tracker</string>
    <string name="reg">Register</string>
    <string name="title">Assignment Tracker</string>
    <string name="stud_name">Student Name</string>
    <string name="university_of_limerick_logo">University of Limerick Logo</string>
    <string name="stud_pass">Password</string>
    <string name="stud_ID">Student ID</string>
    <string name="register_heading">Registration</string>
    <string name="not_registered">Not registered yet? Click here</string>
    <string name="login">Login</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="account">Account</string>
    <string name="assignments">Assignments</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Student Name</string>
    <string name="nav_header_subtitle">Student ID</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="opaque_background_logo">Opaque background logo</string>
    <string name="title_activity_new_task">New Task/Assignment</string>
    <string name="task_type1">Select one...</string>
    <string name="task_type2">Tutorial</string>
    <string name="task_type3">Lab</string>
    <string name="task_type4">Project</string>
    <string name="task_type5">Exam</string>
</resources>
